--- a/src/index.css
+++ b/src/index.css
@@ -5,18 +5,20 @@ textarea {
     -ms-overflow-style: none;
 }
 
-@layer utilities {
-    @keyframes wave {
-        0%,
-        100% {
-            transform: scaleY(0.5);
-        }
-        50% {
-            transform: scaleY(1.5);
-        }
-    }
+@tailwind utilities;
 
-    .animate-wave {
-        animation: wave 1.2s ease-in-out infinite;
+@keyframes wave {
+    0%,
+    100% {
+        transform: scaleY(0.5);
+        opacity: 0.5;
     }
+    50% {
+        transform: scaleY(1);
+        opacity: 1;
+    }
+}
+
+.animate-wave {
+    animation: wave 1.2s ease-in-out infinite;
 }
